fixed layout problems added secondary aside bar

--- a/css/_grid.scss
+++ b/css/_grid.scss
@@ -3,6 +3,10 @@ body {
   min-width: 1140px;
 }
 
+html{
+  background-color: white;
+}
+
 .wrapper {
   margin-left: auto;
   margin-right: auto;
