--- a/css/style.scss
+++ b/css/style.scss
@@ -2,8 +2,11 @@
 @import "global";
 @import "grid";
 
+
+
 .main {
   height: 100vh;
+  background-color: grey;
 }
 
 .overlay {
@@ -14,7 +17,7 @@
 }
 
 .column {
-  height: 100%;
+  height: 100vh;
   background-color: rgba(127, 255, 212, 0.39);
 }
 
@@ -23,44 +26,42 @@
   display: flex;
   justify-content: center;
   align-items: center;
+ 
+  margin-bottom: 15px;
 }
 
 .header {
-  background-color: green;
+  background-color: green;  
   height: 10vh;
   color: white;
 }
 
 .sidebar {
   background-color: blue;
-  height: 100%;
+  height: calc(100% - 30px);
   color: white;
-  margin-top: 15px;
-  margin-bottom: 15px;
 }
 
 .main-content {
   background-color: red;
   color: white;
-  height: 100%;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  height: calc(100% - 30px);
 }
 
 .aside {
   background-color: yellow;
   color: black;
-  height: 100%;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  height: calc(50% - 23px);
 }
 
 .footer {
-  background-color: orange;
+  background-color: orangered;
   color: black;
   height: 10vh;
+  margin-bottom: 0;
 }
 
 .main-container {
   height: 80vh;
+  
 }
